--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ body::-webkit-scrollbar-thumb{
     
     .navbar:hover{
         width: 16rem;
+        box-shadow: 0px 0 50px rgba(0,0,0,.8);
     }
 
     .nav-item:hover .link-icon{
@@ -178,4 +179,5 @@ body::-webkit-scrollbar-thumb{
     width: 100%;
     padding: 1rem 2rem;
     background-color: #e9ffa1;
+    margin: 3rem 0;
 }
