--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ body::-webkit-scrollbar-thumb{
     color: white;
     filter: grayscale(100%) opacity(.5);
     transition: 600ms;
+}
+
+.nav-icon,.nav-text{
     -webkit-touch-callout: none; /* iOS Safari */
       -webkit-user-select: none; /* Safari */
        -khtml-user-select: none; /* Konqueror HTML */
