--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ body::-webkit-scrollbar-thumb{
 @media only screen and (max-width:768px){
     main{
         margin:0;
-        padding: .5rem 1rem;
+        padding: .5rem 1rem 1rem 1rems;
     }
 
     .navbar{
