--- a/assets/sass/helpers/_variables.scss
+++ b/assets/sass/helpers/_variables.scss
@@ -3,7 +3,7 @@ $colors : (
     'light'     :rgb(255, 250, 236),
     'darkgray'  : #4e4e4e,
     'lightgray' : #ebebeb,
-    'orange'    : #ed553b,
+    'orange'    : tomato,
     'white'     : #fff,
     'lemon'     : #e9ffa1,
 );
