--- a/assets/sass/components/_dashboard.scss
+++ b/assets/sass/components/_dashboard.scss
@@ -3,6 +3,7 @@
 $sidebar-width:5rem;
 $sidebar-height:5rem;
 $icon-size:2.5rem;
+$transition-speed:300ms;
 
 :root{
     font-size: $base-font-size;
@@ -13,7 +14,7 @@ $icon-size:2.5rem;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    transition: background-color 300ms ease;
+    transition: background-color $transition-speed ease;
 }
 
 *::-webkit-scrollbar{
@@ -24,7 +25,7 @@ $icon-size:2.5rem;
     width: $sidebar-width;
     height: 100vh;
     position: fixed;
-    transition: width 200ms ease;
+    transition: width $transition-speed - 100 ease;
 
     @media only screen and (max-width:768px){
         bottom: 0;
@@ -37,6 +38,7 @@ $icon-size:2.5rem;
     &:hover{
         @media only screen and (min-width:768px){
             width: 16rem;
+            box-shadow: 1px 0 30px rgba(0,0,0,.3);
             .link-text{
                 display: block!important;
             }
@@ -67,31 +69,39 @@ $icon-size:2.5rem;
 
         .nav-item {
             width: 100%;
-            padding: 0 calc((#{$sidebar-width} - #{$icon-size}) / 2);
-    
+            
             &:not(.nav-logo):hover{
                 .nav-link{
                     filter: grayscale(0) opacity(1);
-    
+                    
                     .link-icon{
                         max-width: calc(#{$icon-size}/1.2);
                         transform: rotate(360deg);
                     }
                 }
             }
-    
+            
             &.nav-bottom{
                 margin-top: auto;
             }
-    
+            
             .nav-link{
                 display: flex;
-                align-items: center;
+                width: 100%;
                 height: 5rem;
+                padding: 0 calc((#{$sidebar-width} - #{$icon-size}) / 2);
+                align-items: center;
                 text-decoration: none;
                 text-align: center;
+                border: none;
+                background-color: transparent;
+                cursor: pointer;
                 filter: grayscale(100%) opacity(.5);
-                transition: filter 600ms ease;
+                transition: filter $transition-speed + 300 ease;
+
+                &:focus{
+                    outline: 0;
+                }
 
                 @media only screen and (max-width:768px){
                     justify-content: center;
@@ -106,7 +116,7 @@ $icon-size:2.5rem;
                 .link-icon{
                     max-width: $icon-size;
                     font-size: $icon-size;
-                    transition: font-size 300ms ease, max-width 300ms ease, transform 600ms ease;
+                    transition: font-size $transition-speed ease, max-width $transition-speed ease, transform $transition-speed + 300 ease;
 
                     @media only screen and (max-width:768px){
                         max-width: calc(#{$icon-size}/1.3);
