--- a/assets/sass/themes/_default.scss
+++ b/assets/sass/themes/_default.scss
@@ -13,9 +13,6 @@ body{
     
     .navbar{
         background-color: color('dark');
-        &:hover{
-            box-shadow: 1px 0 30px rgba(0,0,0,.3);
-        }
         .nav-item{
             &:hover{
                 background-color: black;
@@ -35,12 +32,17 @@ body{
             background-color: black;
         }
     }
+
+    .bg-primary{background-color:color('white');}
+    .bg-secondary{background-color:color('lightgray');}
+    .bg-theme{background-color:color('orange')}
+    .cl-theme{color:color('orange')}
 }
 
 // DARK THEME
 body.quickly-dark{
     color:color('white'); // main text color
-    background-color: #1a1a1a; // main BG color
+    background-color: #131313; // main BG color
 
     &::-webkit-scrollbar-track{
         background-color: black;
@@ -72,6 +74,11 @@ body.quickly-dark{
             background-color: color('dark');
         }
     }
+
+    .bg-primary{background-color:#131313;}
+    .bg-secondary{background-color:color('dark');}
+    .bg-theme{background-color:color('orange')}
+    .cl-theme{color:color('orange')}
 }
 
 // LIGHT THEME
