--- a/assets/sass/components/_dashboard.scss
+++ b/assets/sass/components/_dashboard.scss
@@ -26,7 +26,6 @@ $transition-speed:300ms;
     height: 100vh;
     position: fixed;
     transition: width $transition-speed - 100 ease;
-    z-index: 9999;
 
     @media only screen and (max-width:768px){
         bottom: 0;
@@ -151,6 +150,7 @@ $transition-speed:300ms;
                     font-weight: 800;
                     margin-left: 0;
                     font-size: 2rem;
+                    letter-spacing: .1rem;
                 }
             }
         }
